--- a/client/src/components/DisneyPlusTrending/DisneyPlusTrending.scss
+++ b/client/src/components/DisneyPlusTrending/DisneyPlusTrending.scss
@@ -16,17 +16,19 @@
     justify-content: center;
     gap:5vw;
     flex-wrap: wrap;
-    // margin-left:10vw;
-    // margin-right:10vw;
-    // margin-left:5vw;
+    
     
 
     .card-container { 
         justify-content: center;
+
+        img {
+            width:100vw;
+        }
         
     
         .disney-plus-trending-text-container {
-            display: flex;
+            display:flex;
             flex-direction: column;
             align-items: center;
             
